# Route-Code

./: .config  README  README.md  autoconf.h
MSG-WR201_CHINA/: Makefile
MSG-WR201_CHINA/needChangeFile/: config-config  linux-config  rcS.utt  uttMachine.h
MSG-WR201_CMCC/: Makefile  needChangeFile309.tgz
MSG-WR201_CMCC/needChangeFile/: config-autoconf.h  config-config  daughter.c  uttMachine.h
MSG-WR201_CMCC/source/: .config  Makefile
MSG-WR201_CMCC/source/user/tcl8.5.8/macosx/: Tcl-Release.xcconfig  Tclsh-Info.plist.in  configure.ac
MSG-WR201_CMCC/source/user/tcl8.5.8/macosx/Tcl.xcode/: project.pbxproj
config/: config.in  mkconfig  setconfig
config/scripts/: Menuconfig
lib/: .config  Makefile
lib/gmp-5.0.4/: configure.in
lib/include/: iconv-user.h
lib/include_gcc/: curses.h  eti.h  term.h
lib/libcJSON/: Makefile  test.c
lib/libgmp/: ansi2knr.c  libtool
lib/libntfs-3g/: bitmap.c  lcnalloc.c
lib/libnvram/: Makefile  nvram.h  nvram_env.c
lib/libswitch/: Makefile  sw_cfg.c  switch.c
lib/libupnp/: Makefile
lib/libusb-0.1.12/: bsd.c
lib/libusb-user/: Makefile
lib/mxml-2.6/: config.h  config.status  configure.in  mxml-attr.c  mxml-file.c  mxml-private.c  mxml-private.h  mxml-set.c  mxml.h  mxml.pc  testmxml.c
lib/zlib/: example.c  uncompr.c  zconf.h
linux-2.6.36NEW.x/: Module.symvers  config.bak
linux-2.6.36NEW.x/scripts/: kallsyms  mkcompile_h
user/: busybox.tgz
user/wifidog/src/: Makefile.am  client_list.c  fw_iptables.c  gateway.h  http.h  httpd_thread.c  ping_thread.c  sha1.c  sha1.h  signature.c  signature.h  sms.c  util.c
(+14252 files in other folders)
